# speed-profile

./: .gitignore  README.md  build.sh  clean.sh  run_planning.sh  run_sim.sh  run_simulation.sh  run_sumo.py
data/: crossing.con.xml  crossing.net.xml  crossing.netcfg  crossing.nod.xml  crossing.rou.xml  crossing.sumocfg  crossing.typ.xml
devel/: .catkin  .rosinstall  setup.sh
planning/: CMakeLists.txt
planning/config/: planning.conf  planning.yaml
planning/data/: L7L6_straight.txt  RoadXY.txt  crossing.edg.xml  crossing.net.xml  crossing.rou.xml  crossing.sumocfg  crossing.typ.xml  cycle.net.xml  cycle8.net.xml  cycle8.rou.xml  cycle8.sumocfg
planning/data/path/: L7L2.txt  cycle.txt  write.py
planning/launch/: planning_node.launch  run_path.sh  run_planning.sh  run_sim.sh
planning/msg/: DynamicObstacle.msg  ObstacleMap.msg  Pose.msg
planning/py/rrt/: constants.py  obstacles.py  path.py  visualization.py
planning/script/: plot_sample_space.py
planning/script/matlab/: parseLog.m  parseTra.m  plotCar.m  plotDistanceMap.m  plotEnv.m  plotInitState.m  plotPath.m  plotResult.m  plotRoad.m  plotStSpace.m  plotTTC.m  plotTree.m  readConfig.m  run.m
planning/script/matlab/result/: crossing_init.eps  crossing_path.eps  crossing_road.eps  crossing_tree.eps  emergency_distance_map.eps  emergency_init.eps  emergency_init.fig  emergency_motion.fig  emergency_path.eps  emergency_road.eps  emergency_road_map.eps  emergency_tree.eps  emergency_tree.fig  emergency_vel.eps  emergency_vel.fig  keep_lane_distance_map.eps  keep_lane_init.eps  keep_lane_init.fig  keep_lane_motion.eps  keep_lane_motion.fig  keep_lane_path.eps  keep_lane_road.eps  keep_lane_tree.eps  keep_lane_tree.fig  keep_lane_vel.fig  keeplane_path.eps  path.mat  record2  replan_road.eps  replan_vel.fig  turn_init.eps  turn_init.fig  turn_left_path.eps  turn_left_road.eps  turn_left_tree.eps  turn_motion.eps  turn_motion.fig  turn_tree.eps  turn_tree.fig  turn_vel.eps  (+1 more)
planning/src/: constants.py  parseRoute.py  pathPlan.py  rrtStar.py  runSim.py  run_sim.sh  tmp.py  vehicleControl.py
planning/src/rrt/: common.h  common.py  constants.py  geometryPath.py  node.py  obstacles.cpp  obstacles.h  obstacles.py  path.py  planning_node.cpp  planning_node.h  rrt.cpp  rrt.h  rrtStar.py  rrtStar.py.lprof  spline.cpp  spline.h  test.py  tree.py  tree.txt  visualization.py
planning/src/rrt-cpp/: common.h  obstacles.cpp  obstacles.h  planning_node.cpp  rrt.cpp  rrt.h  spline.cpp
planning/src/sumo/: constants.py  runPath.py  simulation_node.cpp  vehicleControl.py
src/common/: CMakeLists.txt  package.xml
src/common/include/common/: file_config.h  string.h
src/common/msg/: DynamicObstacle.msg
src/common/rviz/: map.rviz
src/planning/: CMakeLists.txt  package.xml
src/planning/config/: change_lane_test_config.pb.txt  emergency_stop_test_config.pb.txt  junction_test_config.pb.txt  obstacle_config.pb.txt  planning.yaml  planning_config.pb.txt  test_config.pb.txt  turn_test_config.pb.txt
src/planning/launch/: planning_node.launch  run_planning.sh
src/planning/proto/: CMakeLists.txt  environment_config.proto  obstacle_config.proto  planning_config.proto  planning_debug.proto
src/planning/script/matlab/: parseLog.m  plotCar.m  plotComplexEnv.m  plotDistanceMap.m  plotEnv.m  plotInitState.m  plotMotion.m  plotPath.m  plotReferencePath.m  plotReplanEnv.m  plotTree.m  postProcessing.m  readConfig.m  readDebugFile.m  run.m  untitled3.m
src/planning/script/matlab/new-result/: change_lane_distance_map.txt  change_lane_distance_map_dbg.pb.txt  change_lane_init.eps  change_lane_init.fig  change_lane_rrt.txt  change_lane_scene.eps  change_lane_scene.fig  change_lane_test_config.pb.txt  change_lane_tree.eps  change_lane_tree.fig  change_lane_vel.eps  change_lane_vel.fig  keep_lane_distance_map.txt  keep_lane_distance_map_dbg.pb.txt  keep_lane_init.eps  keep_lane_init.fig  keep_lane_path.txt  keep_lane_rrt.txt  keep_lane_scene.eps  keep_lane_scene.fig  keep_lane_test_config.pb.txt  keep_lane_tree.eps  keep_lane_tree.fig  keep_lane_vel.eps  keep_lane_vel.fig  processsing.odg  stop_distance_map.txt  stop_distance_map_dbg.pb.txt  stop_init.eps  stop_init.fig  stop_rrt.txt  stop_scene.eps  stop_scene.fig  stop_tree.eps  stop_tree.fig  stop_vel.eps  stop_vel.fig  turn_distance_map.txt  turn_distance_map_dbg.pb.txt  turn_init.eps  (+9 more)
src/planning/script/matlab/new-result/proc/: change_lane_init.eps  change_lane_scene.eps  keep_lane_init.eps  keep_lane_scene.eps  stop_init.eps  stop_scene.eps  turn_init.eps  turn_scene.eps
src/planning/script/matlab/path_generate/: center_lane.m  center_lane.txt  change_lane.m  poly_value.m  solve_polynomial.m
src/planning/script/matlab/result/: crossing_motion.eps  crossing_tree.eps  crossing_vel.eps  emergency_motion.eps  emergency_tree.eps  keep_lane_vel.eps  replan_vel.eps
src/planning/src/: obstacles.cpp  obstacles.h  planning_node.cpp  planning_node.h  planning_visualization.cpp  planning_visualization.h  route.cpp  route.h  rrt.cpp  rrt.h  spline.cpp
src/planning/src/rrt/: obstacles.cpp  obstacles.h  planning_node.cpp  planning_node.h  rrt.cpp  rrt.h
src/planning/src/sumo/: constants.py  runPath.py  simulation_node.h  sumo_interface.h  vehicleControl.py
src/simulation/: CMakeLists.txt  package.xml
src/simulation/config/: simulation.yaml
src/simulation/data/: .junction.net.xml.swp  complex.net.xml  complex.rou.xml  complex.sumocfg  crossing.net.xml  crossing.rou.xml  crossing.sumocfg  cycle8.rou.xml  cycle8.sumocfg  junction.net.xml  junction.rou.xml  junction.sumocfg  junction.typ.xml
src/simulation/data/parser/: .route_parser.py.swp  junction_route.txt  route_parser.py
src/simulation/data/path/: L1L3.txt  cycle.txt  junction_path.txt  write.py
src/simulation/launch/: simulation_node.launch
src/simulation/proto/: CMakeLists.txt  simulation_config.proto
src/simulation/python/: runSim.py
src/simulation/python/sumo/: constants.py  vehicleControl.py
src/simulation/src/: main.cpp  simulation_conf.h  simulation_node.cpp  simulation_node.h
(+23 files in other folders)
